--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    color: #0062d2;
+    color: #e0e5e9;
+    background-color: rgb(61, 78, 207);
 }
 
 header {
-    background: #48434b;
+    background: #433d47;
     color: #fff;
     padding: 10px 0;
 }
@@ -31,17 +32,25 @@ header nav ul li a {
 .hero {
     text-align: center;
     padding: 50px 20px;
-    background: #f4f4f4;
+    background-image: url('../images/Hero_Background.jpg'); /* Adjust the path as needed */
+    background-size: cover; /* Ensures the image covers the entire section */
+    background-position: center; /* Centers the image */
+    color: #fff; /* Ensures text is visible */
+    height: 70vh; /* Sets the section height to fill the viewport */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .hero h1 {
-    font-size: 2.5em;
+    font-size: 4em;
     margin-bottom: 20px;
 }
 
 .hero .btn {
     padding: 10px 20px;
-    background: #0138d0;
+    background: #875526;
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
